# cli

./: .gitignore  Cargo.toml  README.md  ironshield.toml
.cargo/: config.toml
.github/workflows/: ci.yml  ironshield-cli-ci-cd.yml
aur-packages/ironshield-bin/: .SRCINFO  PKGBUILD
aur-packages/ironshield-git/: .SRCINFO  LICENSE  PKGBUILD
src/: client.rs  config.rs  constant.rs  display.rs  error.rs  http_builder.rs  main.rs  response.rs  solve.rs  util.rs  validate.rs
src/client/: client.rs  display.rs  http_builder.rs  mod.rs  request.rs  response.rs  solve.rs  validate.rs
src/commands/: fetch.rs  mod.rs  solve.rs  validate.rs
