[package]
name = "ironshield-cli"
version = "0.1.0"
description = "IronShield CLI component"
authors = ["Sam Sporidis"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
ironshield-api = "0.1.37"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.22"