[package]
name = "ironshield"
version = "0.1.0"
description = "IronShield CLI component"
authors = ["Sam Sporidis"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["parallel"]
parallel = ["ironshield-core/parallel"]

[dependencies]
ironshield-api = "0.1"
ironshield-core = { version = "0.1", features = ["parallel"] }
ironshield-types = "0.1"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
num_cpus = "1.16"