[package]
name = "ironshield-cli"
version = "0.1.19"
description = "IronShield CLI component"
authors = ["IronShield Developers <software@ironshield.cloud>"]
respository = "https://github.com/IronShield-Tech/ironshield-cli"
keywords = ["proof-of-work", "pow", "ddos", "cli", "crypto"]
readme = "README-crates.md"
categories = ["cryptography", "algorithms", "concurrency"]
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "ironshield"
path = "src/main.rs"

[features]
default = ["parallel"]
parallel = ["ironshield-core/parallel"]

[dependencies]
ironshield = { version = "0.1", features = ["parallel"] }
ironshield-api = { version = "0.1" }
ironshield-core = { version = "0.3", features = ["parallel"] }
ironshield-types = { version = "0.2" }
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
num_cpus = "1.16"

# Aggressive release profile optimized for performance
[profile.release]
lto = true               # Link Time Optimization - enables cross-crate inlining
opt-level = 3            # Optimize for maximum performance
strip = true             # Strip debug symbols for smaller binary
codegen-units = 1        # Single codegen unit for maximum optimization opportunities
panic = "abort"          # Aborting instead of unwinding results in a much smaller and performant binary
